objects/hed__Course_Offering_Schedule__c.object
<CustomObject>
    <description>Joins Course Offering to Time Block and provides a way to specify the days and location for a Course.</description>
    <label>Course Offering Schedule</label>
    <nameField>
        <displayFormat>CSH-{000000}</displayFormat>
        <label>Course Offering Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Offering Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to indicate this Course Offering is on Fridays. You can select multiple days.</description>
        <inlineHelpText>Select to indicate this Course Offering is on Fridays. You can select multiple days.</inlineHelpText>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to indicate this Course Offering is on Mondays. You can select multiple days.</description>
        <inlineHelpText>Select to indicate this Course Offering is on Mondays. You can select multiple days.</inlineHelpText>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to indicate this Course Offering is on Sundays. You can select multiple days.</description>
        <inlineHelpText>Select to indicate this Course Offering is on Sundays. You can select multiple days.</inlineHelpText>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to indicate this Course Offering is on Tuesdays. You can select multiple days.</description>
        <inlineHelpText>Select to indicate this Course Offering is on Tuesdays. You can select multiple days.</inlineHelpText>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__End_Time__c</fullName>
        <description>The time of day the Course Offering ends. If you&apos;ve entered a Time Block for this Course Offering, you can leave this field blank.</description>
        <inlineHelpText>The time of day the Course Offering ends. If you&apos;ve entered a Time Block for this Course Offering, you can leave this field blank.</inlineHelpText>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>hed__Facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The location of the scheduled Course Offering.</description>
        <inlineHelpText>The location of the scheduled Course Offering.</inlineHelpText>
        <label>Facility</label>
        <referenceTo>hed__Facility__c</referenceTo>
        <relationshipLabel>Course Offering Schedules</relationshipLabel>
        <relationshipName>Course_Offering_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to indicate this Course Offering is on Saturdays. You can select multiple days.</description>
        <inlineHelpText>Select to indicate this Course Offering is on Saturdays. You can select multiple days.</inlineHelpText>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to indicate this Course Offering is on Thursdays. You can select multiple days.</description>
        <inlineHelpText>Select to indicate this Course Offering is on Thursdays. You can select multiple days.</inlineHelpText>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to indicate this Course Offering is on Wednesdays. You can select multiple days.</description>
        <inlineHelpText>Select to indicate this Course Offering is on Wednesdays. You can select multiple days.</inlineHelpText>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Start_Time__c</fullName>
        <description>The time of day the Course Offering starts. If you&apos;ve entered a Time Block for this Course Offering, you can leave this field blank.</description>
        <inlineHelpText>The time of day the Course Offering starts. If you&apos;ve entered a Time Block for this Course Offering, you can leave this field blank.</inlineHelpText>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>hed__Time_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Time Block in which this Course Offering is being held.</description>
        <inlineHelpText>The Time Block in which this Course Offering is being held.</inlineHelpText>
        <label>Time Block</label>
        <referenceTo>hed__Time_Block__c</referenceTo>
        <relationshipLabel>Course Offering Schedules</relationshipLabel>
        <relationshipName>Course_Offering_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Course Offering this schedule is for.</description>
        <inlineHelpText>The Course Offering this schedule is for.</inlineHelpText>
        <label>Course Offering</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Course Offering Schedules</relationshipLabel>
        <relationshipName>Course_Offering_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>